Added and setup acts_as_votable

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -5,3 +5,23 @@
 <div class="btn-group">
 	<%= link_to 'Visit URL', @link.url, class: "btn btn-primary" %>
 </div>
+
+<div class="btn-group pull-right">
+  <%= link_to like_link_path(@link), method: :put, class: "btn btn-default btn-sm" do %>
+    <span class="glyphicon glyphicon-chevron-up"></span>
+    Upvote
+    <%= @link.get_upvotes.size %>
+  <% end %>
+  <%= link_to dislike_link_path(@link), method: :put, class: "btn btn-default btn-sm" do %>
+    <span class="glyphicon glyphicon-chevron-down">
+    Downvote
+    <%= @link.get_downvotes.size %>
+  <% end %>
+</div>
+
+<% if @link.user == current_user -%>
+	<div class="btn-group">
+		<%= link_to 'Edit', edit_link_path(@link), class: "btn btn-default" %>
+		<%= link_to 'Destroy', @link, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %>
+	</div>
+<% end %>
